Fix width of input on narrow screens

--- a/_sass/partials/_epub-base-typography.scss
+++ b/_sass/partials/_epub-base-typography.scss
@@ -170,6 +170,7 @@ $epub-base-typography: true !default;
         display: block;
         margin: $line-height-default 0;
         width: 100%;
+        box-sizing: border-box;
         &[type="submit"] {
             width: auto;
         }
